Fixed white gap above nav

--- a/css/common.css
+++ b/css/common.css
@@ -17,7 +17,7 @@ div {
 }
 
 .navbar-fixed {
-    position: absolute;
+    top: -1px;
 }
 
 .icon-block {
